sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:4: error: type mismatch;
 found   : Unit
 required: Int
                    {test=true; for (i<-beg to x) {if (isSmaller((i+1), i)) {swap((i+1), i); test=false; x=x-1}; if (isSmaller((), ())) {swap((), ()); test=false; beg=beg+1}; count=count+1}; count=0}
                                                                                                                               ^AlgCocktailSort2:4: error: type mismatch;
 found   : Unit
 required: Int
                    {test=true; for (i<-beg to x) {if (isSmaller((i+1), i)) {swap((i+1), i); test=false; x=x-1}; if (isSmaller((), ())) {swap((), ()); test=false; beg=beg+1}; count=count+1}; count=0}
                                                                                                                                   ^AlgCocktailSort2:4: error: type mismatch;
 found   : Unit
 required: Int
                    {test=true; for (i<-beg to x) {if (isSmaller((i+1), i)) {swap((i+1), i); test=false; x=x-1}; if (isSmaller((), ())) {swap((), ()); test=false; beg=beg+1}; count=count+1}; count=0}
                                                                                                                                              ^AlgCocktailSort2:4: error: type mismatch;
 found   : Unit
 required: Int
                    {test=true; for (i<-beg to x) {if (isSmaller((i+1), i)) {swap((i+1), i); test=false; x=x-1}; if (isSmaller((), ())) {swap((), ()); test=false; beg=beg+1}; count=count+1}; count=0}
                                                                                                                                                  ^